# kunai

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml  rust.yml
src/: config.rs  input.rs  main.rs  niri.rs
src/ui/: dashboard.rs  list.rs  mod.rs  wizard.rs
