[package]
name = "kunai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dirs = "6.0.0"
evdev = { version = "0.13.2", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
chrono = "0.4.43"
rusb = "0.9.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
