[package]
name = "kunai"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
evdev = { version = "0.13.2", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = "0.30.1"
chrono = "0.4.45"
rusb = "0.9.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
nix = { version = "0.31.3", features = ["signal", "process", "fs"] }
